Bug 456857 - Drawing Tablet and Multi Monitor: Turning off the "Target Display" resets setting to "Follow the active screen", which is also not reflected in the KCM
Summary: Drawing Tablet and Multi Monitor: Turning off the "Target Display" resets set...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_tablet (other bugs)
Version First Reported In: 5.25.3
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-07-18 14:11 UTC by postix
Modified: 2022-09-28 05:07 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description postix 2022-07-18 14:11:57 UTC
STEPS TO REPRODUCE
1. Two screens
2. Set your Drawing Tablet's "Target Display" to screen "A" (in my case non-primary)
3. Turn off "A"
4. Turn on "A"

OBSERVED RESULT
Using the tablet shows that the setting is now "Follow the active screen". The KCM still reports "A" as the target display.
Changing the setting to something else and back to "A" "resolves" the issue.

EXPECTED RESULT
"A" keeps the target display again, just as the setting in the KCM reflects.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20220714
KDE Plasma Version: 5.25.3
KDE Frameworks Version: 5.96.0
Qt Version: 5.15.5
Kernel Version: 5.18.9-2-default (64-bit)
Graphics Platform: Wayland
Graphics Processor: AMD Radeon RX 580 Series
Comment 1 postix 2022-07-23 17:09:50 UTC
One more observation:
> Using the tablet shows that the setting is now "Follow the active screen". The KCM still reports "A" as the target display.

The apply button is disabled. Changing it to "Follow the active screen", leaves the apply button disabled. 
Changing it then back to "A" makes the apply button become active again.
Comment 2 Bug Janitor Service 2022-09-26 23:17:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/3004
Comment 3 Vlad Zahorodnii 2022-09-27 07:26:13 UTC
Git commit 2c874fc3e0f4c004e0bf75f39a75cf448e2017c6 by Vlad Zahorodnii, on behalf of Aleix Pol.
Committed on 27/09/2022 at 07:11.
Pushed by vladz into branch 'master'.

tablet: Ensure persistency of the outputName property

With this change, when the specified output is disconnected, it will
just behave as if none were selected but when it's connected again it
will pick it back up.

M  +2    -2    src/backends/libinput/connection.cpp
M  +9    -13   src/backends/libinput/device.cpp

https://invent.kde.org/plasma/kwin/commit/2c874fc3e0f4c004e0bf75f39a75cf448e2017c6
Comment 4 Vlad Zahorodnii 2022-09-27 07:27:54 UTC
Git commit f820a3181d7e2b4b69e60457e0acb206ec7372dd by Vlad Zahorodnii, on behalf of Aleix Pol.
Committed on 27/09/2022 at 07:27.
Pushed by vladz into branch 'Plasma/5.26'.

tablet: Ensure persistency of the outputName property

With this change, when the specified output is disconnected, it will
just behave as if none were selected but when it's connected again it
will pick it back up.


(cherry picked from commit 2c874fc3e0f4c004e0bf75f39a75cf448e2017c6)

M  +2    -2    src/backends/libinput/connection.cpp
M  +9    -13   src/backends/libinput/device.cpp

https://invent.kde.org/plasma/kwin/commit/f820a3181d7e2b4b69e60457e0acb206ec7372dd